[package]
name = "gb-generation-mix"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
rusqlite = "0.32.1"
csv = "1.3.0"
tokio = { version = "1.39.2", features = ["full"] }
tempfile = "3.10.1"
indicatif = "0.17.8"
anyhow = "1.0.86"
homedir = "0.3.3"
